solved landing page issues, wrapped material ui theme to Application

--- a/client/stylesheets/general.css
+++ b/client/stylesheets/general.css
@@ -182,6 +182,7 @@ material ui search bar */
   z-index: 1000;
 }
 
+
 /*
   IMG - SLIDER
 */
@@ -267,6 +268,19 @@ material ui search bar */
 /*
   Sticky
 */
+
+.filter-panel-sticky {
+  border-bottom: 2px solid #f5f5f5;
+}
+
+.filter-panel-sticked {
+  border-bottom: 2px solid #f5f5f5;
+}
+
+.filter-panel-released {
+  border-bottom: 2px solid #f5f5f5;
+}
+
 .search-bar-fixed {
   z-index: 100;
 }
@@ -275,10 +289,10 @@ material ui search bar */
   height: 0 !important;
 }
 
+
 /*
   Location Search Results..
 */
-
 .pac-container {
   z-index: 1400
 }
